--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
   <div style="background:#B2E7F9; height:500px">
     <br>
     <br>
-    <div align="center"> <img src="KakaoTalk_20190709_142151808.png" width=250 /> </div>
+    <div align="center"> <img src="https://github.com/maycan0518/bigedu_beta/blob/master/KakaoTalk_20190709_142151808.png?raw=true" width=250 /> </div>
     <h5 style="text-align:center; color : #FFFFFF">by TN edu </h5>
     <p style="text-align:center; font-family:빙그레체"> 지금 <font color="#8041D9"; size="6px">나의 영어 레벨</font>을 확인하고</p> <DIV><p style="text-align:center; font-family:빙그레체"><font color="#0054FF9"; size="6px">학습가이드</font>를 받아보세요!!! </p>
     <div style="box-shadow:5px 5px 5px #888888; margin:auto; background: #4DC6F5; display:table; width:150px; height:50px">
