--- a/test(question2_1).html
+++ b/test(question2_1).html
@@ -37,7 +37,7 @@
 
   <div style="background:#FFFFFF">
     <br>
-    <div style="float:right; margin:20"> <img src="C:\Users\maycan\Desktop\web\KakaoTalk_20190623_221811930.png" width=80 /> </div>
+    <div style="float:right; margin:20"> <img src="https://raw.githubusercontent.com/maycan0518/bigedu_beta/master/KakaoTalk_20190623_221811930.png" width=80 /> </div>
     <div style="float:center"> <p style="text-align:center; color: gray; font-size:13px"> ※ 본 시험은 TNedu에 저작권이 있으므로 무단 복제 및 사용을 금지합니다. </p> </div>
     <br>
   </div>
